kyverno/require-non-root.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-non-root
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: check-runasnonroot
      match:
        any:
        - resources:
            kinds:
              - Pod
      exclude:
        any:
        - resources:
            namespaces:
              - kube-system
              - kube-node-lease
              - kube-public
              - local-path-storage
              - kyverno
        - resources:
            kinds:
              - Pod
            names:
              - "mongodb*"
      validate:
        message: "Containers must explicitly set runAsNonRoot: true in their securityContext."
        pattern:
          spec:
            securityContext:
              runAsNonRoot: true
